--- a/fitnessAppClient.json
+++ b/fitnessAppClient.json
@@ -11,6 +11,6 @@
   "deployment": {
     "client": "Vercel",
     "server": "Render",
-    "url": "https://your-vercel-app-url.vercel.app"
+    "url": "https://fitness-app-client-seven-ebon.vercel.app/"
   }
 }
